js/js.translator/testData/incremental/invalidation/removeProducerModuleWithStaleConsumer/lib2/l2.1.kt
package bridge

fun bar(): String = "B1"
